# ap-ahlcg

./: .gitignore  README.md  build.sh  build_apworld.sh
.github/workflows/: deploy-web.yml
ahlcg/: Items.py  Locations.py  Options.py  __init__.py  archipelago.json
ahlcg/docs/: en_Arkham Horror The Card Game.md  setup_en.md
client/: Cargo.toml  build.sh  getfonts.sh
client/cardcode/: Cargo.toml
client/cardcode/src/: lib.rs
client/generate_data/: Cargo.toml  build.rs
client/generate_data/src/: card.rs  card_overrides.json  data_py.rs  data_rust.rs  group_data.rs  id_mappings.rs  id_py.rs  lib.rs  logic.rs  prefix.py
client/generate_data/src/data/: 00 - nightofthezealot.ahlcg  01 - thedunwichlegacy.ahlcg  02 - thepathtocarcosa.ahlcg  03 - theforgottenage.ahlcg  04 - thecircleundone.ahlcg
client/src/: data.rs  datapackage.rs  format_json.rs  interface.rs  lib.rs  protocol.rs  state.rs
client/utils/: Cargo.toml
client/utils/src/: lib.rs
client/www/: common.css  index.html  index.js
