[package]
name = "generate_data"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ustr = "1.1.0"
cardcode = { path = "../cardcode" }

[lib]
proc-macro = true
